--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ Although you can use them, for a more unique website, replace these images with 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="google-site-verification" content="Qi2fZgO6v7lotr7aO3jBhZJJtPsCQpVejkUA0zwAUT8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
